# semanticworkbench

./: semantic-workbench.code-workspace
assistants/explorer-doc-edit-assistant/: .env.example  assistant.code-workspace  pyproject.toml
assistants/explorer-doc-edit-assistant/assistant/: assistant_api.py  chat.py  config.py  doc_edit_skill.py  helpers.py  main_routine.py  types.py
assistants/explorer-doc-edit-assistant/assistant/modes/: markdown_edit.py  response.py  router.py
assistants/explorer-doc-edit-assistant/assistant/modes/markdown_edit/: markdown_edit.py  utils.py
assistants/explorer-doc-edit-assistant/assistant/prompts/: doc_edit.py  markdown_edit.py  response.py  router.py  routing.py
assistants/explorer-doc-edit-assistant/assistant/response/: __init__.py  response.py  response_openai.py
libraries/python/skills/skill-library/skill_library/skills/common/routines/: summarize.py
mcp-servers/mcp-server-filesystem-edit/tests/app_handling/: test_word.py
mcp-servers/mcp-server-word/: .env.example  README.md  pyproject.toml
mcp-servers/mcp-server-word/mcp_server/: server.py
